# Chromatic

./: .gitignore  generate_icons.py  index.html  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
public/: manifest.json  sw.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ChromaticLogo.tsx  DateRangeModal.css  DateRangeModal.tsx  Gallery.css  Gallery.tsx  Header.css  Header.tsx  ImageCard.css  ImageCard.tsx  ImageEditorModal.css  ImageEditorModal.tsx  LightboxModal.css  LightboxModal.tsx  PrintStudioModal.css  PrintStudioModal.tsx  SelectionBar.css  SelectionBar.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx  WelcomeModal.css  WelcomeModal.tsx
src/services/: defaultFolderService.ts  demoPhotos.ts  fileSystemService.ts  storageService.ts
src/styles/: global.css  theme.css
src/types/: index.ts
src/utils/: dateUtils.ts
