[package]
name = "chromatic"
version = "1.0.0"
description = "Chromatic - Visualizador de Fotos Elegante y Minimalista"
authors = ["SM1712"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
